--- a/index.html
+++ b/index.html
@@ -126,17 +126,17 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
         <div class="contact" id="contact">
             <div class="container">
                 <div class="contact-form">
-                    <form>
+                    <form  >
                         <h2>Entrez Votre Contact Information</h2>
-                        <div class="field">
+
                         <i class="fa-solid fa-user"></i>
-                        <input class="user" type="text" name="last-name"  id="last-name" placeholder="Votre Nom"  required />
-                        </div>
+                        <input class="user" type="text" name="last-name"  id="last-name" placeholder="Votre Nom" required>
+
                         <br><br>
-                        <div class="field">
+
                         <i class="fa-solid fa-user"></i>
-                        <input class="user" type="text" name="first-name"  id="first-name" placeholder="Votre Prenom" required/>
-                        </div>
+                        <input class="user" type="text" name="first-name"  id="first-name" placeholder="Votre Prenom" required>
+
                         <br><br>
                         <div class="radio">
                             <i class="fa-solid fa-venus-mars"></i>
@@ -144,20 +144,19 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                         <input  type="radio" name="genre" id="féminine" value="féminine">Féminine
                         </div>
                         <br><br>
-                        <div class="field">
+
                         <i class="fa-solid fa-envelope"></i>
-                        <input class="mail" type="email" name="mail" id="email" placeholder="Votre E-Mail Address" required/>
-                        </div>
+                        <input class="mail" type="email" name="mail" id="email" placeholder="Votre E-Mail Address"  required>
+
                         <br><br>
-                        <div class="field">
+
                         <i class="fa-solid fa-phone"></i>
-                        <input class="phone" type="text" name="phone" id="phone" placeholder="Votre Phone Number" required/>
-                        </div>
+                        <input class="phone" type="text" name="phone" id="phone" placeholder="Votre Phone Number"  required>
+
                         <br><br>
-                        <div class="field">
                         <i class="fa-solid fa-house"></i>
-                        <input class="address" type="text" id="address" name="address" placeholder="Votre Address" />
-                        </div>
+                        <input class="address" type="text" id="address" name="address" placeholder="Votre Address" >
+
                         &nbsp;&nbsp;&nbsp;
 
                         <select id="country" name="country" style="margin: 25px 35px;">
