--- a/index.html
+++ b/index.html
@@ -135,42 +135,42 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                         <br><br>
 
                         <i class="fa-solid fa-user"></i>
-                        <input class="user" type="text" name="first-name"  id="first-name" placeholder="Votre Prenom" required>
+                        <input class="user" type="text" name="first-name"  id="first-name" placeholder="Votre Prénom" required>
 
                         <br><br>
                         <div class="radio">
                             <i class="fa-solid fa-venus-mars"></i>
                         <input  type="radio" name="genre" id="masculin" value="masculin">Masculin
-                        <input  type="radio" name="genre" id="féminine" value="féminine">Féminine
+                        <input  type="radio" name="genre" id="féminine" value="féminine">Féminin
                         </div>
                         <br><br>
 
                         <i class="fa-solid fa-envelope"></i>
-                        <input class="mail" type="email" name="mail" id="email" placeholder="Votre E-Mail Address"  required>
+                        <input class="mail" type="email" name="mail" id="email" placeholder="Votre Addresse Mail"  required>
 
                         <br><br>
 
                         <i class="fa-solid fa-phone"></i>
-                        <input class="phone" type="text" name="phone" id="phone" placeholder="Votre Phone Number"  required>
+                        <input class="phone" type="text" name="phone" id="phone" placeholder="Votre Numéro de Téléphone"  required>
 
                         <br><br>
                         <i class="fa-solid fa-house"></i>
-                        <input class="address" type="text" id="address" name="address" placeholder="Votre Address" >
+                        <input class="address" type="text" id="address" name="address" placeholder="Votre Addresse" >
 
                         &nbsp;&nbsp;&nbsp;
 
                         <select id="country" name="country" style="margin: 25px 35px;">
-                            <option disabled selected value>-- Choisir Votre Paye --</option>
+                            <option disabled selected value>-- Choisir Votre Pays --</option>
                             <option value="france">FRANCE</option>
                             <option value="belgique">BELGIQUE</option>
                         </select>
                         <br><br>
 
                         <div class="checbox">
-                        <input type="checkbox" id="newslettre">Recevoir notre newslettres et les deriners option
+                        <input type="checkbox" id="newslettre">Recevoir notre newsletters et les dernières options
                         <br><br>
                         </div>
-                        <textarea class="msg" name="message" id="text" placeholder="Dite Nous Votre Demande"></textarea>
+                        <textarea class="msg" name="message" id="text" placeholder="Dites Nous Votre Demande"></textarea>
                         <br><br>
                         <button type="submit">Submit</button>
                     </form>
@@ -196,17 +196,17 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
             <div class="container">
                 <div class="content">
                     <h2>WALI<span>STOP</span></h2>
-                    <p>Vous pouvez nous suivre sur les resaue social et Nous repondons à toute vos questions</p>
+                    <p>Vous pouvez nous suivre sur les resaue social et Nous repondons à toute vos questions.</p>
                     <div class="social">
-                        <a href="http://facebook.com/"><i class="fa-brands fa-facebook fa-2x"></i></a>
-                        <a href="http://twitter.com/"><i class="fa-brands fa-twitter fa-2x"></i></a>
-                        <a href="http://instagram.com/"><i class="fa-brands fa-instagram fa-2x"></i></a>
-                        <a href="http://youtube.com/"><i class="fa-brands fa-youtube fa-2x"></i></a>
+                        <a href="http://facebook.com/" target="_blanc"><i class="fa-brands fa-facebook fa-2x"></i></a>
+                        <a href="http://twitter.com/" target="_blanc"><i class="fa-brands fa-twitter fa-2x"></i></a>
+                        <a href="http://instagram.com/" target="_blanc"><i class="fa-brands fa-instagram fa-2x"></i></a>
+                        <a href="http://youtube.com/" target="_blanc"><i class="fa-brands fa-youtube fa-2x"></i></a>
                     </div>
                 </div>
                 <div class="details">
-                    Address : <span>4 Rue Jacques prévert Herin 59195</span>
-                    Telephone : <span>+33 06 58 01 10 58</span>
+                    Addresse : <span>4 Rue Jacques prévert Herin 59195</span>
+                    Téléphone : <span>+33 06 58 01 10 58</span>
                     Email : <span>walistopnuisible@gmail.com</span>
                 </div>
                     <p class="copyright">All Rights Reserved &copy; <span> WALISTOP</span> 2022</p>
