--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     <p>WALI<span>STOP</span></p>
                 </a>
                 <ul class="main-nav">
-                    <li><a href="#accueil">ACCUEIL</a></li>
                     <li><a href="./Documents/2021_12_06_064047(1).pdf" target="_blank">CERTIFICAT</a></li>
                     <li><a href="#about-us">A PROPOS </a></li>
                     <li><a href="#contact">CONTACTE</a></li>
@@ -68,7 +67,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
             <div class="container">
                 <div class="slider-box">
                     <div class="slider-number" id="slider-number"></div>
-                    <img src="./Images/slider_1 (2).jpg"alt="">
+                    <img src="./Images/slider_1.jpg"alt="">
                     <img src="./Images/slider_2.jpg"alt="">
                     <img src="./Images/Slider_3.jpg"alt="">
                     <img src="./Images/slider_4.png"alt="">
@@ -135,7 +134,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                         <br><br>
 
                         <i class="fa-solid fa-user"></i>
-                        <input class="user" type="text" name="first-name"  id="first-name" placeholder="Votre Prénom" required>
+                        <input class="user" type="text" name="first-name"  id="first-name" placeholder="Votre Prenom" required>
 
                         <br><br>
                         <div class="radio">
@@ -196,12 +195,12 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
             <div class="container">
                 <div class="content">
                     <h2>WALI<span>STOP</span></h2>
-                    <p>Vous pouvez nous suivre sur les resaue social et Nous repondons à toute vos questions.</p>
+                    <p>Vous pouvez nous suivre sur les resaue social et Nous repondons à toute vos questions</p>
                     <div class="social">
-                        <a href="http://facebook.com/" target="_blanc"><i class="fa-brands fa-facebook fa-2x"></i></a>
-                        <a href="http://twitter.com/" target="_blanc"><i class="fa-brands fa-twitter fa-2x"></i></a>
-                        <a href="http://instagram.com/" target="_blanc"><i class="fa-brands fa-instagram fa-2x"></i></a>
-                        <a href="http://youtube.com/" target="_blanc"><i class="fa-brands fa-youtube fa-2x"></i></a>
+                        <a href="http://facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
+                        <a href="http://twitter.com/" target="_blank"><i class="fa-twitter fabrands fa-twitter fa-2x"></i></a>
+                        <a href="http://instagram.com/" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
+                        <a href="http://youtube.com/" target="_blank"><i class="fa-brands fa-youtube fa-2x"></i></a>
                     </div>
                 </div>
                 <div class="details">
