--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     <p>Vous pouvez nous suivre sur les resaue social et Nous repondons à toute vos questions</p>
                     <div class="social">
                         <a href="http://facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
-                        <a href="http://twitter.com/" target="_blank"><i class="fa-twitter fabrands fa-twitter fa-2x"></i></a>
+                        <a href="http://twitter.com/" target="_blank"><i class="fa-brands fa-twitter fa-2x"></i></a>
                         <a href="http://instagram.com/" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
                         <a href="http://youtube.com/" target="_blank"><i class="fa-brands fa-youtube fa-2x"></i></a>
                     </div>
