--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
         <div class="header" id="header">
             <div class="container">
                 <a href="#" class="logo">
-                    <p>WALI<span>STOP</span></p>
+                    <img src="./Images/logo-2.jpg" alt="Logo" />
                 </a>
                 <ul class="main-nav">
                     <li><a href="./Documents/2021_12_06_064047(1).pdf" target="_blank">CERTIFICAT</a></li>
@@ -59,6 +59,9 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     <li><a href="#contact">CONTACTE</a></li>
                     <li><a href="#devis">DEVIS</a></li>
                 </ul>
+                <div id="slider" class="tel slide-in">En cas de Urgence : <button id="toggle"> Appelez nous </button>
+                    <span id="urgent-span">+33 06 58 01 10 58</span>
+                </div>
             </div>
         </div>
         <!-- End Header -->
@@ -88,14 +91,14 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
             <h2 class="title">A PROPOS DE NOUS</h2>
             <div class="container">
                 <div class="box">
-                    <img class="image" src="./Images/insects_about_us_1.webp" alt="" />
+                    <img class="image-1" src="./Images/insects_about_us_1.webp" alt="" />
                     <div class="content">
                         <h2>Maîtrises des nuisibles</h2>
                         <p>Il s'agit de l'un des services les plus demandé, la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous  garantissons sa qualité pour un meilleur quotidien.</p>
                     </div>
                 </div>
                 <div class="box">
-                    <img class="image" src="./Images/a propos_2.jpg" alt="" />
+                    <img class="image-2" src="./Images/a propos_2.jpg" alt="" />
                     <div class="content">
                         <h2>Traitement de mérule (champignons)</h2>
                         <p>Tous nos services, et celui-ci en particulier, ont été conçus pour vous faciliter la vie.
@@ -103,14 +106,14 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     </div>
                 </div>
                 <div class="box">
-                    <img class="image" src="./Images/fumigation.jpg" alt="" />
+                    <img class="image-3" src="./Images/fumigation.jpg" alt="" />
                     <div class="content">
                         <h2>Désinfection / Décontamination</h2>
                         <p>Ce service est essentiel pour nos clients et nous garantissons sa qualité. Avec ce service, les choses seront simples, plus propres.</p>
                     </div>
                 </div>
                 <div class="box">
-                    <img class="image" src="./Images/a propos_4.jpg" alt="" />
+                    <img class="image-4" src="./Images/a propos_4.jpg" alt="" />
                     <div class="content">
                         <h2>Horaires d'ouverture</h2>
                         <p>Pour votre confort nous nous déplaçons à toute heure de la journée et de la soirée.
@@ -121,6 +124,19 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
             </div>
         </div>
         <!-- End About Us -->
+        <!-- Start Devis  -->
+        <div class="devis" id="devis">
+            <div class="container">
+                <div class="content">
+                    <button class="get-devis" type="submit" id="get-devis">Devis gratuit</button>
+                    <div class="info">
+                        <h3>Devis gratuit pour vous</h3>
+                        <p>Nous vous proposerons un devis gratuit correspondant à votre situation et pour faire de notre mieux nous avons besoin d'avoir plus de précisions vous pouvez nous appeler au <strong>05 33 54 84 56</strong> nous sommes disponibles 24h/24h, 7j/7j. merci pour votre intérêt notre but est de vous satisfaire</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Devis  -->
         <!-- Start Contact -->
         <div class="contact" id="contact">
             <div class="container">
@@ -177,19 +193,6 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
             </div>
         </div>
         <!-- End Contact -->
-        <!-- Start Devis  -->
-        <div class="devis" id="devis">
-            <div class="container">
-                <div class="content">
-                    <button class="get-devis" type="submit" id="get-devis">Devis gratuit</button>
-                    <div class="info">
-                        <h3>Devis gratuit pour vous</h3>
-                        <p>Nous vous proposerons un devis gratuit correspondant à votre situation et pour faire de notre mieux nous avons besoin d'avoir plus de précisions vous pouvez nous appeler au <strong>05 33 54 84 56</strong> nous sommes disponibles 24h/24h, 7j/7j. merci pour votre intérêt notre but est de vous satisfaire</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Devis  -->
         <!-- Start Footer -->
         <div class="footer">
             <div class="container">
