--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     <img src="./Images/logo-2.jpg" alt="Logo" />
                 </a>
                 <ul class="main-nav">
-                    <li><a href="./Documents/2021_12_06_064047(1).pdf" target="_blank">CERTIFICAT</a></li>
+                    <li><a href="./Documents/edition5096470776945558818.PDF" target="_blank">CERTIFICAT</a></li>
                     <li><a href="#about-us">A PROPOS </a></li>
                     <li><a href="#contact">CONTACTE</a></li>
                     <li><a href="#devis">DEVIS</a></li>
@@ -94,32 +94,36 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     <img class="image-1" src="./Images/insects_about_us_1.webp" alt="" />
                     <div class="content">
                         <h2>Maîtrises des nuisibles</h2>
-                        <p>Il s'agit de l'un des services les plus demandé, la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous  garantissons sa qualité pour un meilleur quotidien.</p>
+                        <p>Il s'agit de l'un des services les plus demandé, <span class="text-more-less hide">la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous  garantissons sa qualité pour un meilleur quotidien.</span> </p>
+                        <button onclick="toggle(this)" class="more-btn">Lire Plus</button>
                     </div>
                 </div>
                 <div class="box">
                     <img class="image-2" src="./Images/a propos_2.jpg" alt="" />
                     <div class="content">
                         <h2>Traitement de mérule (champignons)</h2>
-                        <p>Tous nos services, et celui-ci en particulier, ont été conçus pour vous faciliter la vie.
-                        Vous pouvez compter sur nous pour vous en débarrasser.</p>
+                        <p>Tous nos services, et celui-ci en particulier,<span class="text-more-less hide"> ont été conçus pour vous faciliter la vie.
+                        Vous pouvez compter sur nous pour vous en débarrasser. </span></p>
+                        <button onclick="toggle(this)" class="more-btn">Lire Plus</button>
                     </div>
                 </div>
                 <div class="box">
                     <img class="image-3" src="./Images/fumigation.jpg" alt="" />
                     <div class="content">
                         <h2>Désinfection / Décontamination</h2>
-                        <p>Ce service est essentiel pour nos clients et nous garantissons sa qualité. Avec ce service, les choses seront simples, plus propres.</p>
+                        <p>Ce service est essentiel pour nos clients et <span class="text-more-less hide"> nous garantissons sa qualité. Avec ce service, les choses seront simples, plus propres.</span></p>
+                        <button onclick="toggle(this)" class="more-btn">Lire Plus</button>
                     </div>
                 </div>
                 <div class="box">
                     <img class="image-4" src="./Images/a propos_4.jpg" alt="" />
                     <div class="content">
                         <h2>Horaires d'ouverture</h2>
-                        <p>Pour votre confort nous nous déplaçons à toute heure de la journée et de la soirée.
+                        <p>Pour votre confort nous nous déplaçons à <span class="text-more-less hide"> toute heure de la journée et de la soirée.
 
-                            Pour tout renseignement ou prise de rendez-vous, merci de nous contacter directement au 0658011058</p>
-                    </div>
+                            Pour tout renseignement ou prise de rendez-vous, merci de nous contacter directement au 0658011058 </span></p>
+                            <button onclick="toggle(this)" class="more-btn">Lire Plus</button>
+                        </div>
                 </div>
             </div>
         </div>
