--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                 <ul class="main-nav">
                     <li><a href="./Documents/edition5096470776945558818.PDF" target="_blank">CERTIFICAT</a></li>
                     <li><a href="#about-us">A PROPOS </a></li>
-                    <li><a href="#contact">CONTACTE</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
                     <li><a href="#devis">DEVIS</a></li>
                 </ul>
-                <div id="slider" class="tel slide-in"><p>En cas de Urgence : </p><button id="toggle"> Appelez nous </button>
+                <div id="slider" class="tel slide-in"><p>En cas d'urgence : </p><button id="toggle"> Appelez nous </button>
                     <span id="urgent-span">+33 06 58 01 10 58</span>
                 </div>
             </div>
@@ -202,8 +202,8 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
         <div class="footer">
             <div class="container">
                 <div class="content">
-                    <h2>WALI<span>STOP</span></h2>
-                    <p>Vous pouvez nous suivre sur les resaue social et Nous repondons à toute vos questions</p>
+                    <img src="/Images/walistop-logo.png" alt="">
+                    <p>Vous pouvez nous suivre sur les réseaux sociaux et Nous repondons à toute vos questions</p>
                     <div class="social">
                         <a href="http://facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
                         <a href="http://twitter.com/" target="_blank"><i class="fa-brands fa-twitter fa-2x"></i></a>
@@ -212,11 +212,11 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     </div>
                 </div>
                 <div class="details">
-                    Addresse : <span>4 Rue Jacques prévert Herin 59195</span>
+                    Adresse : <span>4 Rue Jacques prévert Herin 59195</span>
                     Téléphone : <span>+33 06 58 01 10 58</span>
                     Email : <span>walistopnuisible@gmail.com</span>
                 </div>
-                    <p class="copyright">All Rights Reserved &copy; <span> WALISTOP</span> 2022</p>
+                    <p class="copyright">All Rights Reserved &copy; <span> <strong>W</strong>ALISTOP</span> 2022</p>
             </div>
         </div>
         <!-- End Footer -->
