--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
             <h2 class="title">À PROPOS DE NOUS</h2>
             <div class="container">
                 <div class="box">
-                    <img class="image-1" src="./Images/insects_about_us_1.webp" alt="" />
+                    <img class="image-1" src="./Images/insects.png" alt="" />
                     <div class="content" data-info="div-1">
                         <h2>Maîtrises des nuisibles</h2>
                         <p>Il s'agit de l'un des services les plus demandés,
@@ -117,7 +117,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     </div>
                 </div>
                 <div class="box">
-                    <img class="image-4" src="./Images/a propos_4.jpg" alt="" />
+                    <img class="image-4" src="./Images/punaise de lit.png" alt="" />
                     <div class="content" data-info="div-4">
                         <h2>Horaires d'ouverture</h2>
                         <p>Pour votre confort nous nous déplaçons à<span class="dots">...</span></span> <span class="text-more-less hide" id="Span-4"> toute heure de la journée et de la soirée.
@@ -125,6 +125,42 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                             Pour tout renseignement ou prise de rendez-vous, merci de nous contacter directement au 0658011058 </span></p>
                             <button onclick="readMore('div-4');" class="more-btn">Lire Plus</button>
                         </div>
+                </div>
+                <div class="box">
+                    <img class="image-1" src="./Images/puce.png" alt="" />
+                    <div class="content" data-info="div-5">
+                        <h2>Maîtrises des nuisibles</h2>
+                        <p>Il s'agit de l'un des services les plus demandés,
+                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous  garantissons sa qualité pour un meilleur quotidien.</span> </p>
+                        <button onclick="readMore('div-5');" class="more-btn">Lire Plus</button>
+                    </div>
+                </div>
+                <div class="box">
+                    <img class="image-1" src="./Images/cafard.png" alt="" />
+                    <div class="content" data-info="div-6">
+                        <h2>Maîtrises des nuisibles</h2>
+                        <p>Il s'agit de l'un des services les plus demandés,
+                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous  garantissons sa qualité pour un meilleur quotidien.</span> </p>
+                        <button onclick="readMore('div-6');" class="more-btn">Lire Plus</button>
+                    </div>
+                </div>
+                <div class="box">
+                    <img class="image-1" src="./Images/mouch.png    " alt="" />
+                    <div class="content" data-info="div-7">
+                        <h2>Maîtrises des nuisibles</h2>
+                        <p>Il s'agit de l'un des services les plus demandés,
+                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous  garantissons sa qualité pour un meilleur quotidien.</span> </p>
+                        <button onclick="readMore('div-7');" class="more-btn">Lire Plus</button>
+                    </div>
+                </div>
+                <div class="box">
+                    <img class="image-1" src="./Images/a propos_4.jpg" alt="" />
+                    <div class="content" data-info="div-8">
+                        <h2>Maîtrises des nuisibles</h2>
+                        <p>Il s'agit de l'un des services les plus demandés,
+                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous  garantissons sa qualité pour un meilleur quotidien.</span> </p>
+                        <button onclick="readMore('div-8');" class="more-btn">Lire Plus</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -136,7 +172,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     <button class="get-devis" type="submit" id="get-devis">Devis gratuit</button>
                     <div class="info">
                         <h3>Devis gratuit pour vos</h3>
-                        <p>Nous vous proposerons un devis gratuit correspondant à votre situation et pour faire de notre mieux, pour cela nous avons besoin d'avoir plus de précisions vous pouvez nous appeler au <strong>05 33 54 84 56</strong> nous sommes disponibles 24h/24h, 7j/7j. Merci pour votre intérêt notre but est de vous satisfaire</p>
+                        <p>Nous vous proposerons un devis gratuit correspondant à votre situation et pour faire de notre mieux, pour cela nous avons besoin d'avoir plus de précisions vous pouvez nous appeler au <strong>06 58 01 10 58</strong> nous sommes disponibles 24h/24h, 7j/7j. Merci pour votre intérêt notre but est de vous satisfaire</p>
                     </div>
                 </div>
             </div>
@@ -202,7 +238,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
         <div class="footer">
             <div class="container">
                 <div class="content">
-                    <img src="./Images/walistop-logo.png" alt="">
+                    <img src="/Images/walistop-logo.png" alt="">
                     <p>Vous pouvez nous suivre sur les réseaux sociaux et Nous repondons à toute vos questions</p>
                     <div class="social">
                         <a href="http://facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
