--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
         <div class="footer">
             <div class="container">
                 <div class="content">
-                    <img src="/Images/walistop-logo.png" alt="">
+                    <img src="./Images/walistop-logo.png" alt="">
                     <p>Vous pouvez nous suivre sur les réseaux sociaux et Nous repondons à toute vos questions</p>
                     <div class="social">
                         <a href="http://facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
